# dogbot

./: .gitignore  README.md  bulletinstall.txt
bot/src/: Singleton.h
bot/src/settings/: BotSettings.h
code/: CMakeCache.txt  CMakeLists.txt  Makefile  bot.cbp  cmake_install.cmake
code/assets/: imgui.ini
code/assets/settings/: AppSettings.json  MotorSettings.json  RobotDebugSettings.json  RobotSettings.json  SimulationSettings.json
code/assets/shaders/: floorShader.frag.glsl  mainShader.frag.glsl  mainShader.vert.glsl
code/src/: BotApp.cpp  IMU.cpp  IMU.h  Robot.cpp  Robot.h  RobotMain.cpp  RobotMain.h  RobotSettings.h  Simulation.cpp  Simulation.h  SimulationMain.cpp  SimulationMain.h
code/src/balance/: IMU.cpp  IMU.h
code/src/graph/: GraphRenderer.cpp  GraphRenderer.h  Graphable.h  GraphableArray.cpp  GraphableArray.h
code/src/gui/: FBOWindow.cpp  FBOWindow.h  GuiSetup.cpp  GuiSetup.h
code/src/ik/: IKControle.cpp  IKControle.h  IKControleLeg.h  IKController.cpp  IKController.h  IKLeg.cpp  IKLeg.h  IKModel.cpp
code/src/input/: InputHandler.cpp  InputHandler.h  StepInput.h
code/src/modelrenderer/: FKLeg.cpp  FKLeg.h  FKModel.cpp  FKModel.h  FKNode.cpp  FKNode.h  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshDataPool.cpp  MeshDataPool.h  ModelRenderer.cpp  ModelRenderer.h  OrbitCamera.cpp  OrbitCamera.h  SymbolBatches.cpp  SymbolBatches.h
code/src/motor/: Motor.cpp  Motor.h  MotorControl.cpp  MotorControl.h
code/src/physics/: Conv.h  Floor.h  PhysicsController.cpp  PhysicsController.h  PhysicsLeg.cpp  PhysicsLeg.h  PhysicsModel.cpp  PhysicsModel.h  PhysicsWorld.cpp  PhysicsWorld.h
code/src/settings/: BotSettings.h  SettingBase.h  SettingBoolean.h  SettingFloat.h  SettingInt.h  SettingMotor.h  SettingsBase.h  SettingsFloat.h  SettingsHandler.h  SettingsInt.h
code/src/states/: RiseState.cpp  RiseState.h  StateControle.cpp  StateControle.h  StateController.cpp  StateController.h  StateEnum.h
code/src/utils/: Unions.h
code/src/walking/: GaitController.cpp  GaitController.h  LegController.cpp  LegController.h
remote/: CMakeLists.txt
remote/arduino/joystickAnalog/: joystickAnalog.ino
remote/assets/settings/: AppSettings.json
remote/scripts/: compileAndRun.sh  compileAndRunDEV.sh  updateAndRun.sh  updateAndRunDEV.sh
remote/src/: ADS1115.cpp  ADS1115.h  RemoteApp.cpp
remote/src/communication/: Communication.cpp  Communication.h  OSCReceiver.cpp  OSCReceiver.h  OSCSender.cpp  OSCSender.h
remote/src/gui/: GuiSetup.cpp
remote/src/serialInput/: Joystick.cpp  Joystick.h  RSerial.cpp  RSerial.h
remote/src/settings/: SettingFloat.h  SettingInt.h  SettingMotor.h  SettingVec3.h
remote/src/utils/: Singleton.h
robot/: CMakeCache.txt  CMakeLists.txt  Makefile
robot/assets/settings/: AppSettings.json  MotorSettings.json  RobotSettings.json
robot/assets/shaders/: floorShader.vert.glsl  mainShader.frag.glsl  mainShader.vert.glsl
robot/src/: BotApp.cpp  Robot.cpp  Robot.h  RobotSettings.h  Simulation.cpp  Simulation.h  Status.cpp  Status.h
robot/src/balance/: BalanceController.cpp  BalanceController.h  IMU.cpp  IMU.h  PID.cpp  PID.h
robot/src/communication/: Communication.cpp  Communication.h  Joystick.h  OSCReceiver.cpp  OSCReceiver.h  OSCSender.cpp  OSCSender.h
robot/src/graph/: GraphRenderer.cpp  GraphRenderer.h  Graphable.h  GraphableArray.cpp  GraphableArray.h
robot/src/gui/: FBOWindow.cpp  FBOWindow.h  GuiSetup.cpp  GuiSetup.h  Logger.cpp  Logger.h  SoundHandler.cpp  SoundHandler.h
robot/src/ik/: IKControleLeg.cpp  IKController.cpp  IKController.h  IKLeg.cpp  IKModel.h
robot/src/input/: Joystick.h  StepInput.cpp  StepInput.h
robot/src/modelrenderer/: FKLeg.h  FKModel.cpp  FKNode.cpp  FKNode.h  Material.h  Mesh.cpp  Mesh.h  MeshData.h  MeshDataPool.cpp  ModelRenderer.cpp  ModelRenderer.h  OrbitCamera.cpp  SymbolBatches.cpp  SymbolBatches.h
robot/src/motor/: Motor.cpp  Motor.h  MotorControl.cpp  MotorControl.h
robot/src/physics/: Conv.cpp  Floor.h  PhysicsController.cpp  PhysicsLeg.cpp  PhysicsLeg.h  PhysicsModel.cpp  PhysicsModel.h  PhysicsWorld.cpp  PhysicsWorld.h
robot/src/settings/: SettingMotor.h  SettingString.h  SettingsHandler.h
robot/src/states/: BaseState.h  NoneState.h  RiseState.cpp  RiseState.h  StateController.cpp  StateController.h  StateEnum.h  StepState.cpp  StepState.h
robot/src/states/states/: BaseState.h  LayDownState.cpp  LayDownState.h  LaydownState.h  StandUpState.cpp  StandUpState.h  StandupState.cpp  StandupState.h  StartState.h  StepState.cpp  StepState.h  Test2LegsUpState.cpp  Test2LegsUpState.h  TestAllLegsDownState.cpp  TestAllLegsDownState.h
robot/src/walking/: GaitController.cpp  GaitController.h  LegController.cpp  LegController.h
